3/5 tests
- 5% disk capacity test
- films updater db connection test
- report service db connection test