@@ -1,12 +1,14 @@
 package com.pjwstk.sakila.diagnostics.controllers;
-
-import com.pjwstk.sakila.diagnostics.contract.SelfTestResult;
+import com.pjwstk.sakila.diagnostics.selfTest.DiskStorageTest;
+import com.pjwstk.sakila.diagnostics.selfTest.SelfTestRunner;
+import com.pjwstk.sakila.reports.selfTest.DbConnectionTest;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 
-import java.util.List;
+import java.util.Arrays;
+
 
 @Controller
 @RequestMapping("diagnostics")
@@ -19,12 +21,12 @@ public class DiagnosticsController {
 
     @GetMapping("selftest")
     public ResponseEntity selfTest(){
-        return ResponseEntity.ok(List.of(
-                new SelfTestResult("CheckStorageForLogs","", true, null),
-                new SelfTestResult("CheckStorageForLogs","", true, null),
-                new SelfTestResult("CheckStorageForLogs","", true, null),
-                new SelfTestResult("CheckStorageForLogs","", true, null)
-                ));
+        SelfTestRunner selfTestRunner = new SelfTestRunner();
+        selfTestRunner.setSelfTestList(Arrays.asList(
+                new DbConnectionTest(),
+                new com.pjwstk.sakila.reports.selfTest.DbConnectionTest(),
+                new DiskStorageTest()));
+        return ResponseEntity.ok(selfTestRunner.run());
     }
 
 }
